Fix flip button on mobile

--- a/src/components/Controls.module.css
+++ b/src/components/Controls.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .controls button {
